[package]
name = "netproxy"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
readme = "README.md"


[dependencies]
async-trait = "*"
bytes = { version = "*", optional = true }
clap = { version = "*", features = ["derive"] }
env_logger = "*"
httpdate = "*"
httparse = "*"
lazy_static = "*"
log = "*"
regex = "*"
time = { version = "*", features = ["macros", "formatting", "parsing", "local-offset", "serde"] }
tokio = { version = "*", features = ["full"] }
tokio-native-tls = "*"
utf8parse = "*"
